# MediaCurator

./: .clang-format  .editorconfig  .gitignore  BACKLOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLANNING.md  README.md  vcpkg.json
.claude/agents/: developer.md  qa.md  reviewer.md
.github/workflows/: build.yml
cmake/: Packaging.cmake
data/: track_classifier.json
docs/: BUILDING.md  INSTALL.md  RELEASING.md
include/classifier/: RegexClassifier.h  TrackClassifier.h
include/core/: AppSettings.h  DatabaseManager.h  ExternalTools.h  LibraryLoader.h  UpdateChecker.h  UserProfile.h  Version.h.in
include/engine/: ActionEngine.h  AnalyzeWorker.h  HighscoreClient.h  HighscoreConfig.h  JobQueue.h  McHighscoreConfig.local.h.template  OpenSubtitlesClient.h  PosterManager.h  RemuxJob.h  RuleEngine.h  SimulateWorker.h  SubtitleManager.h  TrackDecision.h
include/scanner/: FfprobeScanner.h  NfoParser.h  OriginalLanguageDetector.h  ScanWorker.h
include/ui/: ImdbSearchDialog.h  McBulkSummaryDialog.h  McCalibrationDialog.h  McCardDelegate.h  McFileCardDelegate.h  McFileListModel.h  McFilterPanel.h  McHighscoreBand.h  McHighscoreDialog.h  McJobCardDelegate.h  McJobListModel.h  McJobPanel.h  McJobReviewDialog.h  McLanguageFlags.h  McLegendDialog.h  McLibraryPanel.h  McMainWindow.h  McManageFoldersDialog.h  McOnboardingDialog.h  McPreviewDialog.h  McSettingsDialog.h  McStorageGroupChipToggle.h  McSubtitleDownloadDialog.h  McTrackTableModel.h  McWhatIfDialog.h  SvgIcon.h
resources/third_party_licenses/: ffprobe_lgpl.txt  mkvtoolnix_gpl.txt
scripts/: generate_icon.ps1  resize-window.ps1  setup_tools.ps1  setup_tools.sh
src/: CMakeLists.txt  Phase2Stubs.cpp  main.cpp
src/classifier/: RegexClassifier.cpp
src/core/: AppSettings.cpp  DatabaseManager.cpp  ExternalTools.cpp  LibraryLoader.cpp  UpdateChecker.cpp  UserProfile.cpp
src/engine/: ActionEngine.cpp  AnalyzeWorker.cpp  HighscoreClient.cpp  JobQueue.cpp  OpenSubtitlesClient.cpp  PosterManager.cpp  RemuxJob.cpp  RuleEngine.cpp  SimulateWorker.cpp  SubtitleManager.cpp
src/resources/: app.rc  resources.qrc
src/scanner/: FfprobeScanner.cpp  NfoParser.cpp  OriginalLanguageDetector.cpp  ScanWorker.cpp
src/ui/: ImdbSearchDialog.cpp  McBulkSummaryDialog.cpp  McCalibrationDialog.cpp  McCardDelegate.cpp  McFileCardDelegate.cpp  McFileListModel.cpp  McFilterPanel.cpp  McHighscoreBand.cpp  McHighscoreDialog.cpp  McJobCardDelegate.cpp  McJobListModel.cpp  McJobPanel.cpp  McJobReviewDialog.cpp  McLanguageFlags.cpp  McLegendDialog.cpp  McLibraryPanel.cpp  McMainWindow.cpp  McManageFoldersDialog.cpp  McOnboardingDialog.cpp  McPreviewDialog.cpp  McSettingsDialog.cpp  McStorageGroupChipToggle.cpp  McSubtitleDownloadDialog.cpp  McTrackTableModel.cpp  McWhatIfDialog.cpp  SvgIcon.cpp
